# NeAT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_env.sh  install_pytorch_precompiled.sh
configs/: create_experiments.py  pepper.ini
samples/: CMakeLists.txt  nikon2neat.cpp  reconstruct.cpp
scenes/pepper/exp_uniform_25/: eval.txt  train.txt
src/: CMakeLists.txt  Settings.h  build_config.h.in  git_sha1.h.in
src/data/: Dataloader.cpp  Dataloader.h  SceneBase.cpp  SceneBase.cu  SceneBase.h
src/geometry/: ImplicitNet.h  geometry.cpp  geometry.h  geometry_ex_ex.cpp  geometry_ex_ex.h
src/modules/: CameraPose.cu  CameraPose.h  IndirectGridSample3D.cu  IndirectGridSample3D.h  ToneMapper.cpp  ToneMapper.h
src/structure/: HelperStructs.h  HyperTree.cpp  HyperTree.cu  HyperTree.h  HyperTreeStructureOptimizer.cpp  HyperTreeStructureOptimizer.h
src/utils/: CImg.h  cimg_wrapper.cpp  cimg_wrapper.h  utils.h
